E2E test for showing stub files errors even with restored result cache

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -285,6 +285,14 @@ jobs:
           - script: |
               cd e2e/bug-10483
               ../../bin/phpstan
+          - script: |
+              cd e2e/stub-files-errors
+              OUTPUT=$(../bashunit -a exit_code "1" "../../bin/phpstan")
+              echo "$OUTPUT"
+              ../bashunit -a contains 'Method StubFiles\Foo::doFoo() has no return type specified.' "$OUTPUT"
+              OUTPUT=$(../bashunit -a exit_code "1" "../../bin/phpstan")
+              echo "$OUTPUT"
+              ../bashunit -a contains 'Method StubFiles\Foo::doFoo() has no return type specified.' "$OUTPUT"
 
     steps:
       - name: "Checkout"
