Made TooWideMethodThrowTypeRule behaviour similar to TooWideMethodReturnTypehintRule + new config option `checkTooWideThrowTypesInProtectedAndPublicMethods`

--- a/conf/config.level4.neon
+++ b/conf/config.level4.neon
@@ -22,6 +22,8 @@ services:
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWideMethodThrowTypeRule
+		arguments:
+			checkProtectedAndPublicMethods: %checkTooWideThrowTypesInProtectedAndPublicMethods%
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWidePropertyHookThrowTypeRule
