Adjust TooWidePropertyHookThrowTypeRule to be similar to TooWideMethodReturnTypehintRule

--- a/conf/config.level4.neon
+++ b/conf/config.level4.neon
@@ -27,3 +27,5 @@ services:
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWidePropertyHookThrowTypeRule
+		arguments:
+			checkProtectedAndPublicMethods: %checkTooWideThrowTypesInProtectedAndPublicMethods%
