Bleeding edge - report implicit (inherited) too-wide `@throws` type

--- a/conf/config.level4.neon
+++ b/conf/config.level4.neon
@@ -24,6 +24,7 @@ services:
 		class: PHPStan\Rules\Exceptions\TooWideMethodThrowTypeRule
 		arguments:
 			checkProtectedAndPublicMethods: %checkTooWideThrowTypesInProtectedAndPublicMethods%
+			tooWideImplicitThrows: %featureToggles.tooWideImplicitThrows%
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWidePropertyHookThrowTypeRule
