--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -15,3 +15,4 @@ parameters:
 		reportNestedTooWideType: false
 		assignToByRefForeachExpr: true
 		curlSetOptArrayTypes: true
+		tooWideImplicitThrows: true
