Composite action for downgrading code

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -56,31 +56,9 @@ jobs:
 
       - uses: "ramsey/composer-install@v3"
 
-      - name: "Change to simple-downgrade PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
+      - uses: ./.github/actions/downgrade-code
         with:
-          coverage: "none"
-          php-version: "8.4"
-          ini-file: development
-          extensions: mbstring
-
-      - name: "Transform source code"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        shell: bash
-        run: |
-          composer install --no-interaction --no-progress --working-dir=compiler
-          ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-          composer dump
-
-      - name: "Re-store PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "none"
           php-version: "${{ matrix.php-version }}"
-          ini-file: development
-          extensions: mbstring
 
       - name: "PHPStan"
         run: "make phpstan"
