--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -191,34 +191,9 @@ jobs:
         shell: bash
         run: "composer require --dev phpunit/phpunit:^9.6 brianium/paratest:^6.5 symfony/console:^5.4 symfony/process:^5.4 --update-with-dependencies --ignore-platform-reqs --working-dir=tests"
 
-      - name: "Change to simple-downgrade PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
+      - uses: ./.github/actions/downgrade-code
         with:
-          coverage: "none"
-          php-version: "8.4"
-          tools: pecl
-          extensions: ds,mbstring
-          ini-file: development
-          ini-values: memory_limit=2G
-
-      - name: "Transform source code"
-        shell: bash
-        run: |
-          composer install --no-interaction --no-progress --working-dir=compiler
-          ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-          composer dump
-
-      - name: "Re-store PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "none"
           php-version: "${{ matrix.php-version }}"
-          tools: pecl
-          extensions: ds,mbstring
-          ini-file: development
-          ini-values: memory_limit=2G
 
       - name: "Tests"
         run: "make tests"
