--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,25 +46,8 @@ jobs:
 
       - uses: "ramsey/composer-install@v3"
 
-      - name: "Change to simple-downgrade PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
+      - uses: ./.github/actions/downgrade-code
         with:
-          coverage: "none"
-          php-version: "8.4"
-
-      - name: "Transform source code"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        run: |
-          composer install --no-interaction --no-progress --working-dir=compiler
-          ./compiler/vendor/bin/simple-downgrade downgrade -c build/downgrade.php ${{ matrix.php-version }}
-          composer dump
-
-      - name: "Re-store PHP version"
-        if: matrix.php-version == '7.4' || matrix.php-version == '8.0' || matrix.php-version == '8.1'
-        uses: "shivammathur/setup-php@v2"
-        with:
-          coverage: "none"
           php-version: "${{ matrix.php-version }}"
 
       - name: "Validate Composer"
