[PHP 8.5] Support for `#[Override]` on properties

--- a/conf/config.neon
+++ b/conf/config.neon
@@ -82,6 +82,7 @@ parameters:
 	reportPossiblyNonexistentGeneralArrayOffset: false
 	reportPossiblyNonexistentConstantArrayOffset: false
 	checkMissingOverrideMethodAttribute: false
+	checkMissingOverridePropertyAttribute: %checkMissingOverrideMethodAttribute%
 	mixinExcludeClasses: []
 	scanFiles: []
 	scanDirectories: []
