Increase mutation testing timeout

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -240,6 +240,7 @@ jobs:
         run: |
           php build-infection/bin/infection-config.php \
             --source-directory='build/PHPStan/Build' \
+            --timeout=500 \
           > infection.json5
           cat infection.json5 | jq
 
