--- a/issue-bot/composer.json
+++ b/issue-bot/composer.json
@@ -7,6 +7,7 @@
 		"league/commonmark": "^2.3",
 		"nette/neon": "^3.3",
 		"nette/utils": "^3.2",
+		"phpstan/phpstan-deprecation-rules": "^2.0",
 		"phpstan/phpstan-strict-rules": "^2.0",
 		"symfony/console": "^6.1",
 		"symfony/finder": "^6.1"
