TooWideMethodThrowTypeRule - new opt-in option for reporting too-wide implicit (inherited) `@throws`

--- a/conf/config.level4.neon
+++ b/conf/config.level4.neon
@@ -24,7 +24,7 @@ services:
 		class: PHPStan\Rules\Exceptions\TooWideMethodThrowTypeRule
 		arguments:
 			checkProtectedAndPublicMethods: %checkTooWideThrowTypesInProtectedAndPublicMethods%
-			tooWideImplicitThrows: %featureToggles.tooWideImplicitThrows%
+			tooWideImplicitThrows: %exceptions.check.tooWideImplicitThrowType%
 
 	-
 		class: PHPStan\Rules\Exceptions\TooWidePropertyHookThrowTypeRule
