--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1444,6 +1444,18 @@ parameters:
 			path: src/Type/IterableType.php
 
 		-
+			rawMessage: 'Doing instanceof PHPStan\Type\NeverType is error-prone and deprecated. Use Type::isNever() or Type::isExplicitNever() instead.'
+			identifier: phpstanApi.instanceofType
+			count: 2
+			path: src/Type/NeverType.php
+
+		-
+			rawMessage: 'Doing instanceof PHPStan\Type\NeverType is error-prone and deprecated. Use Type::isNever() or Type::isExplicitNever() instead.'
+			identifier: phpstanApi.instanceofType
+			count: 1
+			path: src/Type/NonAcceptingNeverType.php
+
+		-
 			rawMessage: 'Doing instanceof PHPStan\Type\ConstantScalarType is error-prone and deprecated. Use Type::isConstantScalarValue() or Type::getConstantScalarTypes() or Type::getConstantScalarValues() instead.'
 			identifier: phpstanApi.instanceofType
 			count: 3
@@ -1784,6 +1796,12 @@ parameters:
 			identifier: phpstanApi.instanceofType
 			count: 1
 			path: src/Type/TypehintHelper.php
+
+		-
+			rawMessage: 'Call to an undefined method PHPStan\Type\Type::isSubTypeOf().'
+			identifier: method.notFound
+			count: 1
+			path: src/Type/UnionType.php
 
 		-
 			rawMessage: 'Doing instanceof PHPStan\Type\CallableType is error-prone and deprecated. Use Type::isCallable() and Type::getCallableParametersAcceptors() instead.'
