--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -13,6 +13,30 @@ parameters:
 			path: src/Analyser/AnalyserResultFinalizer.php
 
 		-
+			rawMessage: 'Doing instanceof PHPStan\Type\Constant\ConstantStringType is error-prone and deprecated. Use Type::getConstantStrings() instead.'
+			identifier: phpstanApi.instanceofType
+			count: 1
+			path: src/Analyser/Generator/ExprHandler/AssignHandler.php
+
+		-
+			rawMessage: Casting to string something that's already string.
+			identifier: cast.useless
+			count: 2
+			path: src/Analyser/Generator/GeneratorScope.php
+
+		-
+			rawMessage: 'Doing instanceof PHPStan\Type\Constant\ConstantBooleanType is error-prone and deprecated. Use Type::isTrue() or Type::isFalse() instead.'
+			identifier: phpstanApi.instanceofType
+			count: 1
+			path: src/Analyser/Generator/GeneratorScope.php
+
+		-
+			rawMessage: 'Doing instanceof PHPStan\Type\Constant\ConstantStringType is error-prone and deprecated. Use Type::getConstantStrings() instead.'
+			identifier: phpstanApi.instanceofType
+			count: 3
+			path: src/Analyser/Generator/GeneratorScope.php
+
+		-
 			rawMessage: Cannot assign offset 'realCount' to array<mixed>|string.
 			identifier: offsetAssign.dimType
 			count: 1
